[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/powerups/PowerUpSpawner.gd" type="Script" id=1]

[node name="PowerUpSpawner" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="SpawnDelay" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="SpawnDelay" to="." method="_on_SpawnDelay_timeout"]
